# UniversalSceneReader

./: .clang-format  .clang-tidy  .gitignore  meson.build  meson.options
include/: FileReader.hpp  Format.hpp  Platform.hpp  Scene.hpp  SceneLoader.hpp
include/Parser/: ParserFactory.hpp  ParserInterface.hpp  WavefrontParser.hpp
scripts/: setenv.ps1
src/: FileReader.cpp  SceneLoader.cpp  meson.build
src/Parser/: ParserFactory.cpp  WavefrontParser.cpp
test/: meson.build  readFile.cpp
